# rust-blog-backend

./: .dockerignore  .env  .env.exmaple  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.yml  dockerfile  init.sql  notes.txt
migration/src/: lib.rs  m20260325_000001_create_tables.rs
src/: app.rs  auth.rs  auth_handlers.rs  auth_middleware.rs  config.rs  database.rs  docs.rs  error.rs  main.rs  middleware.rs  rate_limit.rs  startup.rs  state.rs
src/cache/: mod.rs  post_cache.rs  tag_cache.rs
src/dtos/: comment.rs  mod.rs  post.rs  tag.rs
src/entities/: comment.rs  mod.rs  post.rs  post_tag.rs  tag.rs
src/routes/: blog.rs  comments.rs  health.rs  mod.rs  posts.rs  tags.rs
src/services/: comment_service.rs  mod.rs  post.rs  post_service.rs  tag.rs  tag_service.rs
src/utils/: mod.rs  slug.rs  validation.rs
