[workspace]
members = [".", "migration"]

[package]
name = "rust-blog-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
migration = { path = "migration" }
# Web 框架 - 個人專案的最佳選擇
axum = { version = "0.8.4", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# 非同步運行時
tokio = { version = "1.0", features = ["full"] }

# JSON 處理 - 個人部落格必備
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
# OpenAPI / Swagger UI
utoipa = { version = "5", features = ["axum_extras","chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# 日期時間 - 文章發布時間
chrono = { version = "0.4", features = ["serde"] }

# 簡單的日誌
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }

# 錯誤處理 - 讓個人維護更輕鬆
thiserror = "2.0.16"
anyhow = "1.0.99"
http = "1.3.1"

sea-orm = { version = "1.1.4", features = [
    "sqlx-postgres",          # PostgreSQL 支援
    "runtime-tokio-rustls",   # 非同步運行時
    "macros",                 # 巨集支援
    "with-chrono",            # 時間型別整合
    "with-uuid",              # UUID 支援
] }


sea-orm-migration = "1.1.4"

# 資料驗證 - 確保輸入品質
validator = { version = "0.20", features = ["derive"] }
# Slug 生成 - 友善的 URL
slug = "0.1"
html2text = "0.16.7"
pulldown-cmark = "0.13.3"
log = "0.4.29"
